--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -19,15 +19,15 @@ jobs:
 
     steps:
     name: Checkout repository
--      uses: actions/checkout@v3
+      uses: actions/checkout@v3
 
 name: Set up Node.js
--      uses: actions/setup-node@v3
+      uses: actions/setup-node@v3
       with:
         node-version: ${{ matrix.node-version }}
 
 name: Install dependencies
--      run: npm install
+       run: npm install
 
 name: Start application
--      run: npm start
+      run: npm start
